--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,6 +28,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install conda
+      uses: conda-incubator/setup-miniconda@v3
+      with:
+        activate-environment: openprattle
+        auto-activate-base: false
+        environment-file: environment.yml
+        auto-update-conda: true
+        python-version: "3.10"
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
