--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,6 +15,10 @@ permissions:
 jobs:
   build:
 
+    defaults:
+        run:
+          shell: bash -l {0}
+
     runs-on: ubuntu-latest
 
     steps:
