--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,7 +42,7 @@ jobs:
         python-version: "3.10"
     - name: Conda test
       run: |
-        oprattle --readable --backend Pybel
+        bin/oprattle --readable --backend Pybel
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
