--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,6 +42,7 @@ jobs:
         python-version: "3.10"
     - name: Conda test
       run: |
+        export PYTHONPATH="./:$PYTHONPATH"
         bin/oprattle --readable --backend Pybel
     - name: Lint with flake8
       run: |
