Added src to pythonpath for github tests

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -49,4 +49,5 @@ jobs:
     - name: Test with pytest
       run: |
         export PATH="bin:$PATH"
+        export PYTHONPATH="./:$PYTHONPATH"
         pytest
